pull updates from pages-collection-template

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 
 # title of site appears in banner
 title: GH-Pages Collection
-# tagline appears in banner
+# tagline is short description that appears in the banner
 tagline: a theme for building simple digital exhibits
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
@@ -29,8 +29,8 @@ repository: https://github.com/uidaholib/pages-collection
 
 # google services [optional!]
 # leave these blank or comment out to NOT include google code
-google-tracking-id: "UA-74844011-1"
-google-cse-id: "002151703305773322890:1pu3smhw1t8"
+# google-tracking-id: "UA-74844011-1"
+# google-cse-id: "002151703305773322890:1pu3smhw1t8"
 
 # build settings
 permalink: pretty
